@@ -83,39 +83,30 @@ functionality that can be directly applied to twill.</li>
 <blockquote>
 <ol class="arabic simple">
 <li>RECORDING.</li>
+<li>execute directories/directory trees.</li>
+<li>expose 'browser' &amp; document re Grig; regexp esp.; make source docs.</li>
+<li>twill-fork: make file writing stuff optional; test massive fork fn.</li>
+<li>add config directives for socket timeout.</li>
+<li>directory stuff: import from specific place, access script location.</li>
 </ol>
-<div class="system-message">
-<p class="system-message-title">System Message: WARNING/2 (<tt class="docutils">developer.txt</tt>, line 100)</p>
-Enumerated list ends without a blank line; unexpected unindent.</div>
-<p>2. execute directories/directory trees.
-4. expose 'browser' &amp; document re Grig; regexp esp.; make source docs.
-5. twill-fork: make file writing stuff optional; test massive fork fn.
-6. add config directives for socket timeout.</p>
 </blockquote>
 <p>Misc fixes &amp; cleanups:</p>
 <blockquote>
 <ol class="arabic simple">
 <li>Paul McGuire's pyparsing suggestions.</li>
+<li>cookie &quot;1&quot; vs 1, in cookielib.</li>
+<li>extend_with etc. -- module namespaces, e.g. extmodule.fn?</li>
+<li>implement more complex proxy support.  proxies proxies proxies.</li>
+<li>'history' to show command history...</li>
+<li>record commands to script</li>
+<li>command line option for stdout -&gt; file</li>
 </ol>
-<div class="system-message">
-<p class="system-message-title">System Message: WARNING/2 (<tt class="docutils">developer.txt</tt>, line 108)</p>
-Enumerated list ends without a blank line; unexpected unindent.</div>
-<p>2. cookie &quot;1&quot; vs 1, in cookielib.
-4. extend_with etc. -- module namespaces, e.g. extmodule.fn?
-5. implement more complex proxy support.  proxies proxies proxies.
-6. 'history' to show command history...
-7. record commands to script
-8. command line option for stdout -&gt; file</p>
 </blockquote>
 <p>Random ideas:</p>
 <blockquote>
 <ol class="arabic">
 <li><p class="first">Build twill interfaces for zope.testbrowser and mechanoid and pycurl.</p>
 <p>(This shouldn't be too difficult, since both are based on mechanize...)</p>
-</li>
-<li><p class="first">Write a sizeable Web app and then test it with all of the different tools,
-above.</p>
-<p>Draw broad conclusions that are unsubstantiated by the work.</p>
 </li>
 <li><p class="first">Develop twill-like languages for <a class="reference" href="http://pamie.sourceforge.net/">PAMIE</a> and <a class="reference" href="http://kb.mozillazine.org/PyXPCOM">PyXPCOM</a>.  Note that the
 hard work, at least for PAMIE, is already done; check out the
